obsidian-night-owl-theme.css
/* ... */
/* unset the title container height and swap padding */
.theme-light .view-header-title-container {
  height: unset;
  padding-left: unset;
  padding-top: 5px; }

/* active titles have different border colours */
.theme-light .workspace-leaf.mod-active .view-header {
  background-color: var(--background-secondary-alt) !important;
  border-right: 3px solid var(--interactive-accent) !important;
  border-left: 0px;
  border-bottom: none; }

/* swap the padding/margin around for the header and actions icons */
.theme-light .view-header-icon,
.theme-light .view-actions {
  padding: 10px 5px; }

.theme-light .view-action {
  margin: 8px 0; }

/* get rid of the gap left by the now-missing horizontal title */
.theme-light .view-content {
  height: 100%; }

/* make the fake drop target overlay have a background so you can see it. */
/* TODO: figure out how the fake target overlay works so we can put the title back, too */
.theme-light .workspace-fake-target-overlay {
  background-color: var(--background-primary); }

/*preview padding too small*/
.theme-light .markdown-preview-view,
.theme-light .mod-single-child .markdown-preview-view {
  font-family: var(--font-family-editor);
  font-size: var(--font-size-normal);
  padding-top: 5px;
  padding-left: 4% !important;
  padding-right: 2% !important; }

/***************************************/
/*    at a rule line before ul list    */
/***************************************/
ul ul {
  position: relative; }

ul ul::before {
  content: '';
  border-left: 1px solid var(--border-color);
  position: absolute; }

ul ul::before {
  left: -1em;
  top: 0;
  bottom: 0; }

/***************************************/
/*       Code block in Editor          */
/***************************************/
/* in-line block for editor */
.cm-s-obsidian span.cm-inline-code,
.cm-s-obsidian span.cm-inline-code.cm-hmd-indented-code,
.cm-s-obsidian
span.cm-inline-code:not(.cm-formatting):not(.cm-hmd-indented-code) {
  background-color: var(--pre-code-bg);
  color: var(--inline-code) !important;
  bottom: 0px !important; }

/* Editor CodeBlock TEXT Appearance */
.cm-s-obsidian pre.HyperMD-codeblock {
  font-family: monaco !important;
  font-size: var(--font-size-code) !important;
  padding: 1px !important;
  display: block;
  color: var(--code-block) !important;
  font-weight: 500;
  text-indent: 0px !important; }

/*remove the border of codeblock in editor */
.HyperMD-codeblock-bg {
  border: 0px !important; }

/*an active line highlight in vim normal mode
.cm-fat-cursor .CodeMirror-activeline .CodeMirror-linebackground{
  background-color: var(--text-selection) !important;
} */
/* in-line block for preview */
code {
  color: var(--inline-code) !important;
  bottom: 0px !important; }

/* graph css  */
.theme-dark .graph-view.color-arrow {
  color: #50fa7b; }

.theme-dark .graph-view.color-fill-tag {
  color: #ffb86c; }

.theme-dark .graph-view.color-fill-attachment {
  color: #ff5555; }

.theme-dark .graph-view.color-fill-unresolved {
  color: #6272a4; }

.search-result-collapse-indicator {
  position: absolute;
  left: 0;
  top: -3px;
  color: var(--text-faint);
  transition: transform 100ms ease-in-out;
  padding: 0px !important; }

.nav-file-title,
.nav-folder-title {
  border: 1px solid transparent;
  border-radius: 3px;
  cursor: pointer;
  color: var(--text-muted);
  font-size: 1rem;
  line-height: 20px;
  padding: 1px 20px 0 26px;
  position: relative;
  white-space: nowrap;
  width: max-content;
  min-width: 100%; }

/* rule line when there are checkboxes*/
ul .task-list-item ul::before {
  left: 0.15em !important; }

/***************************************/
/*               Checkbox              */
/***************************************/
.markdown-preview-view .task-list-item-checkbox {
  -webkit-appearance: none;
  top: 0.2em !important;
  right: 8px;
  box-sizing: border-box;
  position: relative;
  width: 1rem;
  height: 1rem;
  margin: 0;
  box-shadow: 0 0 0.1em var(--text-muted); }
  .markdown-preview-view .task-list-item-checkbox:checked::before {
    content: '✓';
    position: absolute;
    left: 6px;
    top: -3px;
    color: var(--text-accent);
    font-size: 1rem;
    line-height: 1.25rem;
    width: 1.2rem;
    text-align: center;
    text-shadow: 0 0 0.1rem var(--text-accent); }

.markdown-preview-view ul > li.task-list-item.is-checked {
  text-decoration: none; }

.checkbox-container {
  background-color: var(--background-primary); }

/**************************************/
/*  note header bar for non-andy mode */
/*        activated in dark mode      */
/**************************************/
/* header */
.theme-dark .view-header {
  background-color: var(--background-primary) !important;
  border-top: 1px solid var(--border-color) !important;
  border-bottom: 1px solid var(--border-color) !important; }

.theme-dark .view-header-title-container:after {
  background: linear-gradient(to bottom, transparent, var(--background-primary)) !important; }

.theme-dark .workspace-leaf.mod-active .view-header {
  background-color: var(--background-primary-alt) !important;
  border-top: 0px !important;
  border-bottom: 3px solid var(--interactive-accent) !important; }

.workspace-leaf.mod-active .view-header-title-container:after {
  background: linear-gradient(to bottom, transparent, var(--background-secondary-alt)) !important; }

.workspace-leaf.mod-active .view-header-title,
.workspace-leaf.mod-active .view-header-icon {
  color: var(--background-modifier-border); }

.view-header-title,
.view-header-icon,
.view-action {
  color: var(--text-faint); }

.cm-header-1 {
  font-family: var(--font-family-editor);
  font-weight: 500;
  font-size: var(--font-size-h1);
  color: var(--text-title-h1); }

.cm-header-2 {
  font-family: var(--font-family-editor);
  font-weight: 500;
  font-size: var(--font-size-h2);
  color: var(--text-title-h2); }
/* ... */

